---------------------------------------------------------------------------------------------------
Version: 2.1.15
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.14
Date: 2024-11-21
  Info:
    - Update CN locale. (Thanks plexpt!)
    - Many non-localized planet names localized and started using the icons where possible too.
    - Make use of new set_driving() function. Won't affect gameplay, but I no longer have to do an extra teleport as a workaround.
    - Add mod compatibility for "Better Chatting" mod. (Thanks PennyJim!)
---------------------------------------------------------------------------------------------------
Version: 2.1.13
Date: 2024-11-20
  Major Features:
    - Adding support for secondary spawns on Gleba, Vulcanus and Aquilo. This is still experimental and will likely have some issues. Please report any bugs you find. If you want to use this feature, you must go into the in game GUI and check the enable secondary spawns checkbox for the other planets specifically.
  Changes:
    - Stop regrowth deleting cargo pods at center of map. (By marking the center chunks as permanent.)
    - Change surface regrowth checkboxes to be enabled/disabled by the global setting to make it obvious that they are dependent on the global setting.
    - Change moat selection to enabled by default.
  Bugfixes:
    - Fix regrowth surface setting not respecting previous setting state when surface is first created.
    - Remove offline enemy attack error messages. (Not really a bug, just false error messages.)
  Info:
    - Add RU translation (thanks KORESHon!)
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Date: 2024-11-13
  Bugfixes:
    - Change technology research notification to use localized name.
  Info:
    - Add warnings regarding which surfaces are currently supported for spawning.